--- a/P2/.vscode/settings.json
+++ b/P2/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "files.associations": {
+        "stack_fdoble.h": "c"
+    }
 }
