--- a/P3/Makefile
+++ b/P3/Makefile
@@ -8,17 +8,20 @@ all: $(EJS) clear
 vertex.o: vertex.c vertex.h
 	$(CC) $(CFLAGS) vertex.c
 
+queue.o: queue.c queue.h
+	$(CC) $(CFLAGS) queue.c
+
 p3_e1a.o: p3_e1a.c
 	$(CC) $(CFLAGS) p3_e1a.c
 
 p3_e1b.o: p3_e1b
 	$(CC) $(CFLAGS) p3_e1b.c
 
-p3_e1b: p3_e1b.o libdelivery.a libqueue.a vertex.o
-	$(CC) -o p3_e1b p3_e1b.o libdelivery.a libqueue.a vertex.o
+p3_e1b: p3_e1b.o libdelivery.a queue.o vertex.o
+	$(CC) -o p3_e1b p3_e1b.o libdelivery.a queue.o vertex.o
 
-p3_e1a: p3_e1a.o libdelivery.a libqueue.a vertex.o
-	$(CC) -o p3_e1a p3_e1a.o libdelivery.a libqueue.a vertex.o
+p3_e1a: p3_e1a.o libdelivery.a queue.o vertex.o
+	$(CC) -o p3_e1a p3_e1a.o libdelivery.a queue.o vertex.o
 
 clear:
 	rm -rf *.o
