--- a/P3/Makefile
+++ b/P3/Makefile
@@ -1,7 +1,7 @@
 ##################################################
 CC =gcc
 CFLAGS = -c -g -Wall -pedantic
-EJS = p3_e1a p3_e1b
+EJS = p3_e1a p3_e1b p3_e2a p3_e2b
 ##################################################
 all: $(EJS) clear
 
@@ -17,10 +17,16 @@ p3_e1a.o: p3_e1a.c
 p3_e1b.o: p3_e1b
 	$(CC) $(CFLAGS) p3_e1b.c
 
-p3_e1b: p3_e1b.o libdelivery.a queue.o vertex.o
+p3_e1b: p3_e1b.o libdelivery.a libqueue.a vertex.o
+	$(CC) -o p3_e1b p3_e1b.o libdelivery.a libqueue.a vertex.o
+
+p3_e1a: p3_e1a.o libdelivery.a libqueue.a vertex.o
+	$(CC) -o p3_e1a p3_e1a.o libdelivery.a libqueue.a vertex.o
+
+p3_e2b: p3_e1b.o libdelivery.a queue.o vertex.o
 	$(CC) -o p3_e1b p3_e1b.o libdelivery.a queue.o vertex.o
 
-p3_e1a: p3_e1a.o libdelivery.a queue.o vertex.o
+p3_e2a: p3_e1a.o libdelivery.a queue.o vertex.o
 	$(CC) -o p3_e1a p3_e1a.o libdelivery.a queue.o vertex.o
 
 clear:
