--- a/P4/makefile_ext
+++ b/P4/makefile_ext
@@ -22,3 +22,25 @@ p4_e1_bal: p4_e1
 
 p4_e1.o: p4_e1.c
 	gcc -g -Wall -pedantic -ansi -c p4_e1.c
+
+run_e2: clean_e2 p4_e2 p4_e2_bal
+	./p4_e2 data50K.txt id
+	./p4_e2_bal data50K.txt id
+	./p4_e2 data50K.txt tag
+	./p4_e2_bal data50K.txt tag
+	./p4_e2 data10.txt id
+	./p4_e2_bal data10.txt id
+	./p4_e2 data10.txt tag
+	./p4_e2_bal data10.txt tag
+
+clean_e2:
+	rm -f p4_e2.o p4_e2 p4_e2_bal
+
+p4_e2: p4_e2.o search_queue.o bstree.o vertex.o
+	gcc -o p4_e2 p4_e2.o search_queue.o bstree.o vertex.o
+
+p4_e2_bal: p4_e2
+	gcc -o p4_e2_bal p4_e2.o search_queue.o bstree.o vertex.o
+
+p4_e2.o: p4_e2.c
+	gcc -g -Wall -pedantic -ansi -c p4_e2.c
